--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Resume to showcase skills" />
-    <meta name="keywords" content="onepage, resume, CV HTML template, personal Vcard, html resume, free resume template, free HTML template, free bootstrap template, personal portfolio, free html portfolio" />
-    <meta name="author" content="http://trendytheme.net/" />
-    <title>Nikhila P Kumar - Automation Engineer</title>
+    <meta name="keywords" content="AEM, manual testing, AEM testing" />
+    <meta name="author" content="Nikhila P Kumar" />
+    <title>Nikhila P Kumar - AEM Test Engineer</title>
     <!-- Web Fonts -->
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,700" rel="stylesheet" type="text/css" />
     <!-- Bootstrap core CSS -->
@@ -46,10 +46,10 @@
     <section id="home" class="tt-fullHeight" data-stellar-vertical-offset="50" data-stellar-background-ratio="0.2">
         <div class="intro">
             <div class="intro-sub">I AM AN</div>
-            <h1>Automation Engineer<span></span></h1>
+            <h1>AEM Test Engineer | QA Engineer<span></span></h1>
             <p>
-                I have around 5 years of experience as QA and SQL Developer<br />
-                Worked on more than 4 Projects, Involved in various phases of testing also, have good knowledge on SQL.
+                I have around 4 years of experience as AEM QA and Manual Tester<br />
+                Worked on more than 4 Projects, Involved in various phases of testing, also I have good knowledge on SQL and Frontend technologies.
             </p>
         </div>
         <div class="mouse-icon">
@@ -110,18 +110,18 @@
                     <div class="short-info wow fadeInUp">
                         <h3>Overview</h3>
                         <p>
-                            An opportunity to work and upgrade myself in an organization that believes in gaining a competitive edge and contribute to the community. I am currently expanding my knowledge in Automation and also focussing on expanding my skills to learn advanced frameworks and devOps tools to create a strong interest in my employers. Also, I posses good skill in T-SQL I believe in becoming an honest asset to the organization. As an individual, I am self-confident you will find me creative, funny and passionate. I am a forward thinker, which others may find inspiring when working as a team.
+                            An opportunity to work and upgrade myself in an organization that believes in gaining a competitive edge and contribute to the community. I am currently expanding my knowledge in Automation and also focussing on expanding my skills to learn advanced frameworks and devOps tools to create a strong interest in my employers. Also, I posses good skill in SQL I believe in becoming an honest asset to the organization. As an individual, I am self-confident you will find me creative, funny and passionate. I am a forward thinker, which others may find inspiring when working as a team.
                         </p>
                     </div>
                     <div class="short-info wow fadeInUp">
                         <h3>What I Do ?</h3>
                         <p>
-                            I have been working as an QA and SQL Developer since 5 years.
-                            I expertise in automation testing, manual testing, and also in writing complex queries and procedures.
+                            I have been working as an AEM QA.
+                            I expertise in AEM testing, manual testing, and also in writing complex queries.
                             My priority will always be to deliver the project with high quality to my clients and ensure the task is completed before the given deadlines.
                         </p>
                         <ul class="list-check">
-                            <li>Automation Testing</li>
+                            <li>AEM Testing</li>
                             <li>Manual Testing</li>
                             <li>RDMS - Oracle & MS-SQL</li>
                             <li>Web Design (HTML/CSS/JS)</li>
@@ -206,7 +206,30 @@
                     </div>
                     <div class="resume">
                         <ul class="timeline">
-                            <li>
+                            <li >
+                                <div class="posted-date">
+                                    <span class="month">2020-Present</span>
+                                </div>
+                                <!-- /posted-date -->
+                                <div class="timeline-panel wow fadeInUp">
+                                    <div class="timeline-content">
+                                        <div class="timeline-heading">
+                                            <h3>Automation QA Engineer</h3>
+                                            <span>Adobe Systems India Pvt. Ltd.</span>
+                                        </div>
+                                        <!-- /timeline-heading -->
+                                        <div class="timeline-body">
+                                            <p>
+                                                Worked on application named helpx, one of the biggest support wiki for all the Adobe products.
+                                            </p>
+                                        </div>
+                                        <!-- /timeline-body -->
+                                    </div>
+                                    <!-- /timeline-content -->
+                                </div>
+                                <!-- /timeline-panel -->
+                            </li>
+                            <li class="timeline-inverted">
                                 <div class="posted-date">
                                     <span class="month">2018-2020</span>
                                 </div>
@@ -221,29 +244,6 @@
                                         <div class="timeline-body">
                                             <p>
                                                 Worked on the projects like Lantaugh, BookMyTable, Velocity -02 related to Retail and Financial Domain.
-                                            </p>
-                                        </div>
-                                        <!-- /timeline-body -->
-                                    </div>
-                                    <!-- /timeline-content -->
-                                </div>
-                                <!-- /timeline-panel -->
-                            </li>
-                            <li class="timeline-inverted">
-                                <div class="posted-date">
-                                    <span class="month">2015-2017</span>
-                                </div>
-                                <!-- /posted-date -->
-                                <div class="timeline-panel wow fadeInUp">
-                                    <div class="timeline-content">
-                                        <div class="timeline-heading">
-                                            <h3>Quality Analyst</h3>
-                                            <span>Thin Air Technologies PVT. LTD.</span>
-                                        </div>
-                                        <!-- /timeline-heading -->
-                                        <div class="timeline-body">
-                                            <p>
-                                                Worked on application named Fringe related to Telecom domain.
                                             </p>
                                         </div>
                                         <!-- /timeline-body -->
@@ -269,10 +269,22 @@
                 <div class="col-md-6">
                     <div class="skill-progress">
                         <div class="skill-title">
-                            <h3>MANUAL TESTING</h3>
+                            <h3>AEM Testing</h3>
                         </div>
                         <div class="progress">
                             <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                                <span>70%</span>
+                            </div>
+                        </div>
+                        <!-- /.progress -->
+                    </div>
+                    <!-- /.skill-progress -->
+                    <div class="skill-progress">
+                        <div class="skill-title">
+                            <h3>Manual Testing</h3>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                                 <span>90%</span>
                             </div>
                         </div>
@@ -281,19 +293,7 @@
                     <!-- /.skill-progress -->
                     <div class="skill-progress">
                         <div class="skill-title">
-                            <h3>JAVA</h3>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                                <span>60%</span>
-                            </div>
-                        </div>
-                        <!-- /.progress -->
-                    </div>
-                    <!-- /.skill-progress -->
-                    <div class="skill-progress">
-                        <div class="skill-title">
-                            <h3>SELENIUM</h3>
+                            <h3>SQL</h3>
                         </div>
                         <div class="progress">
                             <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
@@ -412,7 +412,7 @@
                         <div class="count-wrap">
                             <div class="col-sm-3 col-xs-6">
                                 <i class="fa fa-flask"></i>
-                                <h3 class="timer">5</h3>
+                                <h3 class="timer">4</h3>
                                 <p>Years of Experience</p>
                             </div>
                             <div class="col-sm-3 col-xs-6">
@@ -427,7 +427,7 @@
                             </div>
                             <div class="col-sm-3 col-xs-6">
                                 <i class="fa fa-users"></i>
-                                <h3 class="timer">5</h3>
+                                <h3 class="timer">4</h3>
                                 <p>Happy Clients</p>
                             </div>
                         </div>
