--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <div class="intro-sub">I AM AN</div>
             <h1>AEM Test Engineer | QA Engineer<span></span></h1>
             <p>
-                I have around 4 years of experience as AEM QA and Manual Tester<br />
-                Worked on more than 4 Projects, Involved in various phases of testing, also I have good knowledge on SQL and Frontend technologies.
+                I have around 4+ years of experience as AEM QA and Manual Tester<br />
+                Worked on more than 3 Projects, Involved in various phases of testing, also I have good knowledge on SQL and Frontend technologies.
             </p>
         </div>
         <div class="mouse-icon">
@@ -97,7 +97,7 @@
                             <li><strong>Name:</strong> Nikhila P Kumar</li>
                             <li><strong>Date of birth:</strong> 05 July 1990</li>
                             <li>
-                                <strong>Address:</strong> JP Nagar 7th Phase, Puttenahalli, Bangalore
+                                <strong>Address:</strong> Bangalore
                             </li>
                             <li><strong>Nationality:</strong> Indian</li>
                             <li><strong>Phone:</strong> +918971623576</li>
@@ -214,7 +214,7 @@
                                 <div class="timeline-panel wow fadeInUp">
                                     <div class="timeline-content">
                                         <div class="timeline-heading">
-                                            <h3>Automation QA Engineer</h3>
+                                            <h3>Automation QA Engineer II</h3>
                                             <span>Adobe Systems India Pvt. Ltd.</span>
                                         </div>
                                         <!-- /timeline-heading -->
@@ -422,7 +422,7 @@
                             </div>
                             <div class="col-sm-3 col-xs-6">
                                 <i class="fa fa-thumbs-up"></i>
-                                <h3 class="timer">5</h3>
+                                <h3 class="timer">4</h3>
                                 <p>Projects Done</p>
                             </div>
                             <div class="col-sm-3 col-xs-6">
@@ -453,8 +453,7 @@
                             <i class="fa fa-map-marker"></i>
                             <address>
                                 <strong>Address/Street</strong>
-                                JP Nagar 7th Phase<br />
-                                Puttenahalli, Banglore<br />
+                                Banglore<br />
                             </address>
                         </div>
                         <div class="col-sm-3">
